2003-07-25  Matthias Clasen  <maclas@gmx.de>

	* glib/gwin32.c: 
	* glib/gutf8.c: 
	* glib/gunicollate.c: 
	* glib/gtree.c: 
	* glib/gspawn.c: 
	* glib/gmain.c: 
	* glib/giochannel.c: 
	* glib/gfileutils.c: 
	* glib/gerror.c: 
	* glib/gconvert.c: 
	* glib/gasyncqueue.c: 
	* glib/gmem.c: Remove some explicit Docbook markup which is no longer necessary
	since gtk-doc does the right thing.

	* glib/gutf8.c (g_utf8_get_char_validated): Work around gtk-doc stupidity.

2003-07-20  Hans Breuer  <hans@breuer.org>

	* glib/trio/makefile.msc : (new file) for msvc build

	* glib/glib.def : removed some duplicated entries

	* glib/gscanner.c : add same workaround for MSVC(5.0)
	which does not allow to cast an uint64 to float.
	Same as in gvaluetransform.c
	Also move #include <io.h> behind inclusion of "glib.h"
	which defines the needed G_OS_WIN32

	* glib/makefile.msc.in : added gprintf.obj, trio\trio.lib
	as well as shell32.lib

	* tests/spawn-test.c : include <io.h> on win32

2003-07-12  Matthias Clasen  <maclas@gmx.de>

	* glib/gprintf.c: Doc additions.

2003-07-10  Joel Brich <joel.brich@laposte.net>

	* configure.in: Added "eo" to ALL_LINGUAS.

Wed Jul  9 16:27:26 2003  Manish Singh  <yosh@gimp.org>

	* glib/gmain.c (g_main_context_unref_and_unlock): check if
	context->poll_chunk is set before trying to destroy it. For example,
	this can happen if no sources are added to a context before it is
	freed.

2003-07-09  Morten Welinder  <terra@gnome.org>

	* glib/gprintf.c (g_vasprintf): Avoid var declaration after
	statement.

2003-07-09  Matthias Clasen  <maclas@gmx.de>

	Support for one-time initialization functions.  (#69668, Sebastian Wilhelmi)

	* configure.in: Check whether double checked locking is safe, define g_once() in
	glibconfig.h accordingly.
	* glib/gthread.h: Add GOnce, GOnceStatus, G_ONCE_INIT and g_once_impl.
	* glib/gthread.c (g_once_impl): Fallback implementation using a mutex if double checked
	locking is unsafe.